fixes bad width on capitalone.com on mobile and removes hover from jump to on mobile

--- a/app/styles/capitalone.scss
+++ b/app/styles/capitalone.scss
@@ -1,5 +1,11 @@
 .capitalone {
   .password-protect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
     h1 {
       margin-top: 85px;
       font-family: Playfair Display;
